hphp/test/zend/good/tests/classes/static_mix_2.php.expectf

Fatal error: Cannot change non-static method pass::show() to static in fail in %s/static_mix_2.php on line 9
